--- a/public/chat.html
+++ b/public/chat.html
@@ -133,7 +133,7 @@
             <!-- footer -->
             <!-- ============================================================== -->
             <footer class="footer">
-                Super Chat - Fernando Herrera
+                Super Chat
             </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
